[package]
name = "compass"
version = "0.1.0"
edition = "2021"
description = "Privacy-preserving peer discovery service for Minecraft players using iroh P2P networking"
license = "MIT"

[lib]
name = "compass"
path = "src/lib.rs"

[[bin]]
name = "compass"
path = "src/main.rs"

[dependencies]
iroh = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "2"
dashmap = "6"
base16ct = { version = "0.2", features = ["alloc"] }
n0-future = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures-lite = "2"
